crates/macros/tests/fail/fixed-layout/field-not-fixed-layout.stderr
error[E0277]: the trait bound `Other: mem_markers::fixed_layout::FixedLayout` is not satisfied
  --> $DIR/field-not-fixed-layout.rs:6:8
   |
6  |     a: Other,
   |        ^^^^^ the trait `mem_markers::fixed_layout::FixedLayout` is not implemented for `Other`
   | 
  ::: $WORKSPACE/src/fixed_layout.rs:10:18
   |
10 | pub fn ensure<T: FixedLayout>() {}
   |                  ----------- required by this bound in `mem_markers::fixed_layout::ensure`
